--- a/project/app/templates/Principal/PrincipalDash.html
+++ b/project/app/templates/Principal/PrincipalDash.html
@@ -77,7 +77,7 @@
         </a>
             
         <div>
-            <p>Name :  {{principal.user.first_name}}</p><p>{{principal.user.last_name}}</p>
+            <p>Name :  {{principal.user.username}}</p><p>{{principal.user.last_name}}</p>
             <p>Date Of Join : {{principal.principal_Doj}}</p>
         </div>
     </div>
@@ -88,7 +88,7 @@
             <a href="{% url 'PrincipalViewHod' %}"><li class="border-2 w-[7rem] text-center hover:bg-gray-300 transition ease-in duration-200  bg-gray-500 rounded-3xl">View Hod</li></a>
             <a href="{% url 'PrincipalViewFaculty' %}"><li class="border-2 w-[7rem] text-center hover:bg-gray-300 transition ease-in duration-200 bg-gray-500 rounded-3xl ">View Faculty</li></a>
             <a href="{% url 'PrincipalViewStudents' %}"><li class="border-2 w-[7rem] text-center hover:bg-gray-300 transition ease-in duration-200 bg-gray-500 rounded-3xl ">View Students</li></a>
-            <a href="{% url 'PrincipalViewLeaveletters' %}"><li class="border-2 w-[7rem] text-center hover:bg-gray-300 transition ease-in duration-200 bg-gray-500 rounded-3xl ">Faculty LeaveLetters</li></a>
+            <a href="{% url 'PrincipalViewLeaveletters' %}"><li class="border-2 w-[7rem] text-center hover:bg-gray-300 transition ease-in duration-200 bg-gray-500 rounded-3xl ">LeaveLetters</li></a>
         </ul>
         <div class="totals flex justify-center ">
             <div class="flex flex-col w-32">
