--- a/project/app/templates/hod/HodAddAttendance.html
+++ b/project/app/templates/hod/HodAddAttendance.html
@@ -109,7 +109,7 @@
         <div >
             <p>Name : {{hod.user.first_name}}</p>
             <p>Designation : {{hod.Hod_Designation}}</p>
-            <p>Date Of Join : {{hod.Hod_Doj}}</p>
+            {% comment %} <p>Date Of Join : {{hod.Hod_Doj}}</p> {% endcomment %}
         </div>
     </div>
 
