--- a/project/app/templates/hod/HodAddUser.html
+++ b/project/app/templates/hod/HodAddUser.html
@@ -8,67 +8,96 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), linear-gradient(to right, #757575, #333333);
-            color: white;
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
+             background-image: url("{% static 'img/001.jpeg' %}");
+            background-repeat: no-repeat;
+            background-size: cover;
         }
     </style>
 
 </head>
-<body class="  w-screen ">
+<body class=" w-screen ">
  
 
     <div class="flex w-full items-center justify-center content-center h-screen space-x-10 ">
     <div class="flex  flex-col">
        
-        <form method="post" enctype="multipart/form-data"  class="rounded-3xl flex flex-col w-[30rem] text-center space-y-5 border-2 border-gray-200 p-5 " onsubmit="return validateForm()">
+      <div class="flex w-full items-center justify-center content-center h-screen space-x-10">
+    <div class="flex flex-col">
+        <form method="post" enctype="multipart/form-data" class="rounded-3xl flex flex-col w-[30rem] text-center space-y-2 border-2 border-gray-200 p-2 " onsubmit="return validateForm()">
             {% csrf_token %}
-        {% if msg %} <div class="error bg-red-500 text-white px-4 py-2 rounded" id="errorMsg">{{ msg }}</div> {% endif %}
-            <input class="text-black" type="text" name="firstname" id="firstname" placeholder="First name" required>
-            <input class="text-black" type="text" name="Lastname" id="lastname" placeholder="Last name" required>
-            <input class="text-black" type="text" name="username" id="username" placeholder="Username" required>
-            <input class="text-black" type="email" name="email" id="email" placeholder="Email" required>
+            {% if msg %}
+                <div class="error bg-red-500 text-white px-4 py-2 rounded" id="errorMsg">{{ msg }}</div>
+            {% endif %}
             <div>
-                <label>Date Of Birth</label><br>
-                <input class="text-black" type="date" name="dob" id="dob" placeholder="Date Of Birth" required>
+                <label for="firstname" class="block text-gray-200">First Name:</label>
+                <input class="text-black border border-gray-300 rounded-md py-2 px-4 block w-full" type="text" name="firstname" id="firstname" placeholder="Enter your first name" required>
             </div>
             <div>
-                <label>Date Of Joining</label><br>
-                <input class="text-black" type="date" name="doj" id="doj" placeholder="Date Of Join" required>
+                <label for="lastname" class="block text-gray-200">Last Name:</label>
+                <input class="text-black border border-gray-300 rounded-md py-2 px-4 block w-full" type="text" name="lastname" id="lastname" placeholder="Enter your last name" required>
             </div>
-            <input class="text-black" type="text" name="Designation" id="designation" placeholder="Designation" required>
-            <select  class="text-black" name="Department" id="department" required>
-                <option class="text-black" value="">Select Department</option>
-                {% for department in departments %}
-                    <option value="{{department.id}}">{{department.department_name}}</option>
-                {% endfor %}
-            </select>
-            <input class="text-black" type="text" name="pnum" id="pnum" placeholder="Phone number" required>
-            <!-- Password input field -->
-<input class="flex text-center text-black w-[20rem]" type="password" id="pass" name="pass" placeholder="Password" required>
-
-<!-- Button to toggle password visibility -->
-<button type="button" id="togglePassVisibility">Show Password</button>
-
-<!-- Confirm password input field -->
-<input class="flex text-center text-black w-[20rem]" type="password" id="pass2" name="pass2" placeholder="Confirm password" required>
-
-            <input class="text-white" type="file" name="profile" id="profile" placeholder="Profile" required>
-            <input class="bg-green-500 rounded-3xl flex text-center justify-center content-center items-center" type="submit" value="Submit">
-            <a href="{% url 'HodDash' %}" class="bg-gray-500 rounded-3xl flex text-center justify-center content-center items-center">Back</a>
+            <div>
+                <label for="username" class="block text-gray-200">Username:</label>
+                <input class="text-black border border-gray-300 rounded-md py-2 px-4 block w-full" type="text" name="username" id="username" placeholder="Enter your username" required>
+            </div>
+            <div>
+                <label for="email" class="block text-gray-200">Email:</label>
+                <input class="text-black border border-gray-300 rounded-md py-2 px-4 block w-full" type="email" name="email" id="email" placeholder="Enter your email" required>
+            </div>
+            <div>
+                <label for="dob" class="block text-gray-200">Date of Birth:</label>
+                <input class="text-black border border-gray-300 rounded-md py-2 px-4 block w-full" type="date" name="dob" id="dob" required>
+            </div>
+            <div>
+                <label for="designation" class="block text-gray-200">Designation:</label>
+                <input class="text-black border border-gray-300 rounded-md py-2 px-4 block w-full" type="text" name="designation" id="designation" placeholder="Enter your designation" required>
+            </div>
+            <div>
+                <label for="department" class="block text-gray-200">Department:</label>
+                <select class="text-black border border-gray-300 rounded-md py-2 px-4 block w-full" name="department" id="department" required>
+                    <option value="">Select Department</option>
+                    {% for department in departments %}
+                        <option value="{{department.id}}">{{department.department_name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div>
+                <label for="pnum" class="block text-gray-200">Phone Number:</label>
+                <input class="text-black border border-gray-300 rounded-md py-2 px-4 block w-full" type="tel" name="pnum" id="pnum" placeholder="Enter your phone number" required>
+            </div>
+            <div>
+                <label for="pass" class="block text-gray-200">Password:</label>
+                <div class="relative">
+                    <input class="flex text-center text-black border border-gray-300 rounded-md py-2 px-4 block w-full pr-12" type="password" id="pass" name="pass" placeholder="Enter your password" required>
+                    <button class="absolute inset-y-0 right-0 flex items-center px-4 text-gray-300 bg-gray-600 border border-gray-300 rounded-l-none rounded-md" onclick="togglePasswordVisibility()" type="button" id="togglePassVisibility">
+                        Show Pass
+                    </button>
+                </div>
+            </div>
+            <div>
+                <label for="pass2" class="block text-gray-200">Confirm Password:</label>
+                <input class="flex text-center text-black border border-gray-300 rounded-md py-2 px-4 block w-full" type="password" id="pass2" name="pass2" placeholder="Confirm your password" required>
+            </div>
+            <div>
+                <label for="profile" class="block text-gray-200">Profile Picture:</label>
+                <input class="text-white border border-gray-300 rounded-md py-2 px-4 block w-full" type="file" name="profile" id="profile" required>
+            </div>
+            <div>
+                <input class="bg-green-500 rounded-3xl flex text-center justify-center content-center items-center py-2 px-4 block w-full text-black mt-5" type="submit" value="Submit">
+            </div>
+            <div>
+                <a href="{% url 'HodDash' %}" class="bg-gray-500 rounded-3xl flex text-center justify-center content-center items-center py-2 px-4 block w-full text-black mt-5">Back</a>
+            </div>
         </form>
     </div>
-    <div class="w-1/2 ">
+    <div class="w-1/2">
         <div id="alertMsg" class="h-[10rem] hidden rounded-3xl w-full mb-10 bg-green-500 text-white text-center flex items-center justify-center">
             User added successfully!
         </div>
         <img class="" src="{% static "img/college.jpeg" %}">
     </div>
+</div>
 
-    <div>
-</body>
 <script>
     // Function to toggle password visibility
     function togglePasswordVisibility() {
@@ -87,11 +116,6 @@
         }
     }
 
-    // Event listener for the button
-    document.getElementById("togglePassVisibility").addEventListener("click", function() {
-        togglePasswordVisibility();
-    });
-
     // Function to validate form
     function validateForm() {
         var firstname = document.getElementById('firstname').value;
@@ -99,7 +123,6 @@
         var username = document.getElementById('username').value;
         var email = document.getElementById('email').value;
         var dob = document.getElementById('dob').value;
-        var doj = document.getElementById('doj').value;
         var designation = document.getElementById('designation').value;
         var department = document.getElementById('department').value;
         var pnum = document.getElementById('pnum').value;
@@ -108,7 +131,7 @@
         var profile = document.getElementById('profile').value;
 
         // Perform validation
-        if (firstname === '' || lastname === '' || username === '' || email === '' || dob === '' || doj === '' || designation === '' || department === '' || pnum === '' || pass === '' || pass2 === '' || profile === '') {
+        if (firstname === '' || lastname === '' || username === '' || email === '' || dob === '' || designation === '' || department === '' || pnum === '' || pass === '' || pass2 === '' || profile === '') {
             alert('Please fill in all fields');
             return false;
         }
@@ -126,26 +149,6 @@
             return false;
         }
 
-        // Check age (above 18)
-        var dobDate = new Date(dob);
-        var todayDate = new Date();
-        var age = todayDate.getFullYear() - dobDate.getFullYear();
-        var monthDiff = todayDate.getMonth() - dobDate.getMonth();
-        if (monthDiff < 0 || (monthDiff === 0 && todayDate.getDate() < dobDate.getDate())) {
-            age--;
-        }
-        if (age < 18) {
-            alert('You must be at least 18 years old to register');
-            return false;
-        }
-
-        // Check if date of joining is before today
-        var dojDate = new Date(doj);
-        if (dojDate > todayDate) {
-            alert('Date of joining must be before today');
-            return false;
-        }
-
         // Check phone number length
         if (pnum.length < 10) {
             alert('Phone number must be at least 10 digits long');
@@ -155,6 +158,7 @@
         // If all validations pass, return true to submit the form
         return true;
     }
+
     function displayAlertMsg() {
         var alertDiv = document.getElementById('alertMsg');
         alertDiv.classList.remove('hidden');
@@ -162,13 +166,14 @@
             alertDiv.classList.add('hidden');
         }, 3000); // Hide the message after 3 seconds (3000 milliseconds)
     }
-    
+
     // Check for success message in the URL query parameters
     var urlParams = new URLSearchParams(window.location.search);
     if (urlParams.has('success')) {
         // Display the alert message if success parameter is present
         displayAlertMsg();
     }
-    
 </script>
+
+</body>
 </html>
